--- a/ui/index.html
+++ b/ui/index.html
@@ -1,17 +1,82 @@
-<!doctype html>
-<html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Midhun's IMAD profile</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+button:hover,.fa:hover{
+    opacity:0.7;
+}
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 4px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 50%;
+    font-size: 18px;
+}
+
+  </style>
+</head>
+<body>
+  <div class="container text-center full-height">
+    <div class="row content">
+      <div class="col-sm-4 sidenav">
+        <div class="thumbnail">
+          <!-- Change the link in the src attribute below to an image available on the Internet -->
+          <img src="https://pbs.twimg.com/profile_images/877255361194934272/pxAaMeId_400x400.jpg" alt="Lights" style="width:100%" />
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
+        <h2 align="center"><b>Midhun Manohar</b></h2>
+        <p align="center">
+             <a href="https://facebook.com/midhmanohar"><i class="fa fa-facebook-official"></i></a>
+             <a href="https://twitter.com/midhmanohar"><i class="fa fa-twitter"></i></a>
+             <a href="https://instagram.com/midhmanohar"><i class="fa fa-instagram"></i></a>
+             <br>
+            <button onclick="location.href='https://twitter.com/messages/compose?recipient_id=836183010261225472'">Contact</button>
+        </p>
+       
+      </div>
+
+      <div class="col-sm-8 text-left">
+        <h3>About me</h3>
+        <p>I like to watch movies :)</p>
+        <hr>
+        <h3>Education</h3>
+        <p>Iam doing my bachelors from Gce kannur in Computer science and engg.</p>
+        <hr>
+        <h3>Experience</h3>
+        <p>C++,Python,C,HTML,CSS,Javascript,Jquery</p>
+        <hr>
+        <h3>A cool thing I've done recently</h3>
+        <p>i ate 3 eggs in a day ;)<p>
+        <hr>
+         <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-text="I just built #myfirstapp with #imad! @HasuraEd. Check it out here - " data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         <iframe id="fb_share" src="" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+         <script>
+            var current_url = window.location.href;
+            document.getElementById("fb_share").src="https://www.facebook.com/plugins/share_button.php?href="+current_url+"&layout=button_count&size=large&mobile_iframe=true&appId&width=84&height=28";
+         </script>
+      </div>
+    </div>
+  </div>
+
+  <footer class="container-fluid text-center footer">
+  <q>Set your goals high,and don't stop till you get there</q>
+  </footer>
+</body>
 </html>
