made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,9 @@
         <br>
         <div class="center text-big bold">
            Hello World
-        </div>
+				</div>
+
+				<span>Iam going to made some changes locally</span>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
