[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,13 +1,23 @@
 <html>
     <head>
         <title>article-one</title>
+        <style>
+            .container{
+                max-width:800px;
+                color:grey;
+                font-family:sans-serif;
+                margin:0 auto;
+                padding:30px 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="container">
+            <div>
             <a href="/">Home</a>
             <hr/>
-        </div>
-        <div>
+            </div>
+            <div>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, at ut fugiat fuga.
             Modi officiis harum, ipsa quod totam quas aliquam eaque reiciendis earum tempore optio
             placeat dolorem eos ullam.</p>
@@ -20,6 +30,7 @@
             Modi officiis harum, ipsa quod totam quas aliquam eaque reiciendis earum tempore optio
             placeat dolorem eos ullam.</p>
             
+            </div>
         </div>
     </body>
 </html>
