--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -15,6 +15,8 @@
         <div class="container">
             <div>
             <a href="/">Home</a>
+            
+            <h3>Article-One</h3>
             <hr/>
             </div>
             <div>
