[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -16,7 +16,7 @@
             <div>
             <a href="/">Home</a>
             
-            <h3>Article-One</h3>
+            <h3>Article-Three</h3>
             <hr/>
             </div>
             <div>
