--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,15 +1,7 @@
 <html>
     <head>
         <title>article-one</title>
-        <style>
-            .container{
-                max-width:800px;
-                color:grey;
-                font-family:sans-serif;
-                margin:0 auto;
-                padding:30px 20px;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
