--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>article-one</title>
-        <link rel="stylesheet" href="style.css" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
