[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,25 +1,15 @@
 <html>
     <head>
-        <title>article-one</title>
-        <style>
-            .container{
-                max-width:800px;
-                color:grey;
-                font-family:sans-serif;
-                margin:0 auto;
-                padding:30px 20px;
-            }
-        </style>
+        <title>article-two</title>
     </head>
     <body>
         <div class="container">
             <div>
             <a href="/">Home</a>
-            
-            <h3>Article-Two</h3>
             <hr/>
             </div>
             <div>
+            <h3>Article-Two</h3>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, at ut fugiat fuga.
             Modi officiis harum, ipsa quod totam quas aliquam eaque reiciendis earum tempore optio
             placeat dolorem eos ullam.</p>
