[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,11 +8,10 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="main-text" class="center text-big bold">
            Hello World
            
 		</div>
-		<span>Iam going to made some changes locally</span>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
