[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
                
     		</div>
     		
-    		<footer>
+    		<footer class="text-center">
     		    This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times 
     		</footer>
 		</div>
