--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
     	    </div>
     	</div>
     	
-    	<ul>
+    	<ul class="text-center">
 		    <li>name1</li>
 		    <li>name2</li>
 		    <li>name3</li>
