[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,8 +20,8 @@
     		</footer>
     		
     		<div class="text-center">	
-    		<input type="text" id="name" placeholder="name"></input>
-    		<input type="submit" value="submit"></input>
+    		<input type="text" id="name" placeholder="name"/>
+    		<input type="submit" value="submit"/>
     	    </div>
     	</div>
     	
