--- a/ui/index.html
+++ b/ui/index.html
@@ -21,11 +21,11 @@
     		
     		<div class="text-center">	
     		<input type="text" id="name" placeholder="name"/>
-    		<input type="submit" value="submit"/>
+    		<input type="submit" value="submit" id="submit"/>
     	    </div>
     	</div>
     	
-    	<ul>
+    	<ul id="namelist">
 		    <li>name1</li>
 		    <li>name2</li>
 		    <li>name3</li>
