[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,6 +28,8 @@
     	<ul id="namelist">
 		   
 		</ul>
+		<br/>
+                <textarea rows="6" cols="100" placeholder="Add comments here..."></textarea>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
