[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,8 +28,10 @@
     	<ul id="namelist">
 		   
 		</ul>
-		<br/>
-                <textarea rows="6" cols="100" placeholder="Add comments here..."></textarea>
+		<div class="text-center">
+    		<br/>
+            <textarea rows="6" cols="100" placeholder="Add comments here..."></textarea>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
