[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,10 @@
 		</ul>
 		<div class="text-center">
     		<br/>
-            <textarea rows="6" cols="100" placeholder="Add comments here..."></textarea>
+            <textarea rows="6" cols="100" id="comment" placeholder="Add comments here..."></textarea>
+            <input type="submit" id="commentSubmit"/>
+            
+            <div id="commentArea"></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
