[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,7 +33,7 @@
 		
 		<div class="text-center">
     		<br/>
-            <textarea rows="6" cols="100" id="comment" placeholder="Add comments here..."></textarea>
+            <input id="comment" placeholder="Add comments here..."/>
             <input type="submit" id="commentSubmit"/>
             
             <div id="commentArea"></div>
