--- a/ui/index.html
+++ b/ui/index.html
@@ -35,7 +35,7 @@
     		<br/>
             <input type="text" id="username" placeholder="username"/>
             <input type="password" id="password"/>
-            <input type="submit" id="submit_btn"/>
+            <input type="submit" id="submit_btn" placeholder="Login"/>
         </div>
         
         
