[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,7 +35,8 @@
     		<br/>
             <input type="text" id="username" placeholder="username"/>
             <input type="password" id="password"/>
-            <input type="submit" id="submit_btn" placeholder="Login"/>
+            <button id="login">Login</button>
+            <button id="register">Register</button>
         </div>
         
         
