--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
 		
 
 		
-		<div class="text-center">
+		<div class="text-center" id="login_area">
     		<br/>
             <input type="text" id="username" placeholder="username"/>
             <input type="password" id="password"/>
